--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -5,6 +5,7 @@ tap "homebrew/cask"
 tap "homebrew/core"
 tap "homebrew/services"
 brew "antigen"
+brew "asdf"
 brew "autoconf"
 brew "automake"
 brew "readline"
