--- a/dotbot.conf.yaml
+++ b/dotbot.conf.yaml
@@ -7,6 +7,7 @@
 - link:
     ~/.zshrc: zshrc
     ~/.bashrc: bashrc
+    ~/.default-python-packages: asdf/default-python-packages
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
