--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -5,32 +5,37 @@ tap "homebrew/cask"
 tap "homebrew/core"
 tap "homebrew/services"
 brew "antigen"
-brew "asdf"
 brew "autoconf"
 brew "automake"
+brew "coreutils"
+brew "libtool"
+brew "libyaml"
 brew "readline"
+brew "asdf"
 brew "awscli"
 brew "bash-completion"
 brew "glib"
 brew "pkg-config"
-brew "coreutils"
-brew "gh"
-brew "libtool"
+brew "gdk-pixbuf"
+brew "gh" # github
 brew "libksba"
 brew "gnupg"
 brew "gobject-introspection"
+brew "python@3.8"
+brew "harfbuzz"
+brew "pango"
 brew "graphviz"
 brew "httpie"
+brew "imagemagick" # for Rails to work with images
 brew "jq"
 brew "libpq"
-brew "libyaml"
 brew "mkcert"
 brew "nmap"
 brew "node"
 brew "nvm"
 brew "postgresql", link: false
-brew "postgresql@12"
-brew "postgresql@9.6", link: true
+brew "postgresql@12", link: true
+brew "postgresql@9.6"
 brew "redis"
 brew "ruby"
 brew "s3cmd"
@@ -42,6 +47,7 @@ brew "tesseract"
 brew "tfenv"
 brew "watch"
 brew "watchman"
+brew "wxmac"
 brew "yarn"
 brew "z"
 brew "zlib"
