Attempt to modify init script

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,58 +1,28 @@
-tap "cjbassi/gotop"
 tap "heroku/brew"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
 tap "homebrew/services"
-brew "antigen"
-brew "autoconf"
-brew "automake"
+# Unix
+brew "git"
+brew "openssl"
+brew "zsh"
+# Programming language prerequisites
+brew "libyaml" # should come after OpenSSL
 brew "coreutils"
-brew "libtool"
-brew "libyaml"
+cask "gpg-suite"
+brew "libpq"
 brew "readline"
+brew "zlib"
+# Package managers, CLIs
 brew "asdf"
 brew "awscli"
-brew "bash-completion"
-brew "glib"
-brew "pkg-config"
-brew "gdk-pixbuf"
 brew "gh" # github
-brew "libksba"
-brew "gnupg"
-brew "gobject-introspection"
-brew "python@3.8"
-brew "harfbuzz"
-brew "pango"
-brew "graphviz"
-brew "httpie"
-brew "imagemagick" # for Rails to work with images
-brew "jq"
-brew "libpq"
-brew "mkcert"
-brew "nmap"
-brew "node"
-brew "nvm"
-brew "postgresql", link: false
-brew "postgresql@12", link: true
-brew "postgresql@9.6"
-brew "redis"
-brew "ruby"
-brew "s3cmd"
-brew "sdl2"
-brew "shellcheck"
-brew "sk"
-brew "terraform", link: false
-brew "tesseract"
-brew "tfenv"
-brew "watch"
-brew "watchman"
-brew "wxmac"
-brew "yarn"
-brew "z"
-brew "zlib"
-brew "zsh"
-brew "cjbassi/gotop/gotop"
+brew "bash-completion"
 brew "heroku/brew/heroku"
-cask "adoptopenjdk"
-cask "react-native-debugger"
+# Misc
+brew "imagemagick" # for Rails to work with images
+brew "postgresql", link: false
+brew "redis"
+brew "watch"
+brew "z"
